Fix mobile viewport cutoff using dvh and visualViewport API

--- a/src/app.css
+++ b/src/app.css
@@ -1,6 +1,7 @@
 .container {
   width: 100vw;
   height: 100vh;
+  height: 100dvh;
   display: flex;
   flex-direction: column;
   background: #f2f2f7;
