--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@
 html, body, #app {
   width: 100%;
   height: 100%;
+  height: 100dvh;
   overflow: hidden;
 }
 
